# captcha

./: Cargo.toml  ChangeLog
examples/: build_captchas.rs  perf.rs  various.rs
src/: lib.rs
src/filters/: color_invert.rs  cow.rs  dots.rs  grid.rs  line.rs  mod.rs  noise.rs  random_line.rs  wave.rs
src/fonts/: mod.rs
src/images/: mod.rs
src/samples/: mod.rs
