[package]
name = "captcha"
version = "0.0.9"
authors = ["Daniel Etzold <detzold@gmail.com>"]
description = "Library for generating CAPTCHAs."
license-file = "LICENSE.md"
keywords = ["CAPTCHA"]
readme = "README.md"
exclude = ["gen/*", "captcha.iml", ".idea", "*.png"]
documentation = "https://docs.rs/captcha/"
homepage = "https://github.com/daniel-e/captcha"
repository = "https://github.com/daniel-e/captcha"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.25" }
rand = "0.8.5"
serde_json = "1.0"
base64 = "0.13"
typetag = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
time = "0.3.9"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:typetag"]
